--- a/openapi/frameworks/gnostic.mdx
+++ b/openapi/frameworks/gnostic.mdx
@@ -3,7 +3,6 @@ title: How To Generate an OpenAPI Spec With Gnostic
 description: "Take an OpenAPI document and end with a fully functional gRPC server. Create a RESTful gateway to the gRPC server and generate SDKs in multiple languages."
 ---
 
-import { Spotlight } from "@/mdx/components";
 
 # How to generate an OpenAPI/Swagger spec with Gnostic
 
@@ -46,189 +45,295 @@ The first endpoint is `createDrink`: Create a new drink based on the provided in
 
 Our second endpoint is `getDrink`: Create a new drink based only on the drink's name. Return a list of ingredients with quantities, a recipe, and a photo.
 
-<Spotlight>
+## Creating the OpenAPI Document
 
-#### !!steps ApiExploration
+Let's take a detailed tour of our API by exploring `bar.yaml`.
 
-Let's take a detailed tour of our API by exploring `bar.yaml`:
-
-```yaml ! bar.yaml !from ./assets/gnostic/bar.yaml
-```
-
----
-
-#### !!steps ApiVersion
+### OpenAPI Version
 
 We'll start by creating an OpenAPI 3.0.0 document. Gnostic, unfortunately, only supports OpenAPI 3.0.0, so we'll have to make sure our document is compliant.
 
-```yaml ! bar.yaml focus=1 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+openapi: 3.0.0
 ```
 
----
+### API Information
 
-#### !!steps InfoObject
+Next, we'll create an info object that describes our API:
 
-Next, we'll create an info object that describes our API. This object contains the title, version, and description of our API.
-
-```yaml ! bar.yaml focus=3:6 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+info:
+  title: Intergalactic Bar API
+  version: 1.0.0
+  description: "An API for a cosmic bar that serves drinks from across the galaxy."
 ```
 
----
+### Server Configuration
 
-#### !!steps ServersDefinition
+Now let's define the servers where our API will be hosted:
 
-Now let's define the servers where our API will be hosted. In this case, we'll have a single server running locally on `http://localhost:8080`.
-
-```yaml ! bar.yaml focus=8:10 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+servers:
+  - url: http://localhost:8080
+    description: Local server
 ```
 
----
+### Endpoints
 
-#### !!steps CreateDrinkEndpoint
+Let's define the endpoints for our API:
 
-Next, we'll define the `/create-drink` endpoint. This endpoint will accept a POST request with a JSON body containing the ingredients of the drink.
+#### Create Drink Endpoint
 
-```yaml ! bar.yaml focus=13:27 !from ./assets/gnostic/bar.yaml
+The `/create-drink` endpoint accepts a POST request with the ingredients:
+
+```yaml bar.yaml
+paths:
+  /create-drink:
+    post:
+      summary: Create a new drink based on ingredients
+      operationId: createDrink
+      description: "Supply a list of ingredients and get back a new drink recipe."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/IngredientsRequest'
 ```
 
----
+The endpoint returns a drink response:
 
-#### !!steps CreateDrinkResponse
-
-Our `/create-drink` endpoint will return a JSON object with the drink's name, description, recipe, and possibly a photo.
-
-```yaml ! bar.yaml focus=28:39 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+      responses:
+        200:
+          description: "Successfully created a new drink"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DrinkResponse'
+        400:
+          description: "Invalid request"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
 ```
 
----
+#### Get Drink Endpoint
 
-#### !!steps GetDrinkEndpoint
+The `/get-drink` endpoint accepts a POST request with the drink name:
 
-Next, we'll define the `/get-drink` endpoint. This endpoint will accept a POST request with a JSON body containing the name of the drink.
-
-```yaml ! bar.yaml focus=47:58 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+  /get-drink:
+    post:
+      summary: Get a drink recipe by name
+      operationId: getDrink
+      description: "Supply a drink name and get back its recipe."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DrinkNameRequest'
 ```
 
----
+The endpoint returns a drink recipe:
 
-#### !!steps GetDrinkResponse
-
-Our `/get-drink` endpoint will return a JSON object with the ingredients, recipe, and possibly a photo of the drink.
-
-```yaml ! bar.yaml focus=60:79 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+      responses:
+        200:
+          description: "Successfully retrieved the drink recipe"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DrinkRecipeResponse'
+        400:
+          description: "Invalid request"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+        404:
+          description: "Drink not found"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
 ```
 
----
+### Component Schemas
 
-#### !!steps IngredientsRequestComponent
+Let's define the schemas for our components:
 
-Our first component, `IngredientsRequest`, is a JSON object that contains the ingredients of a drink as an array of strings.
+#### Ingredients Request
 
-```yaml ! bar.yaml focus=89:104 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+components:
+  schemas:
+    IngredientsRequest:
+      type: object
+      description: "A request to create a new drink based on a list of ingredients."
+      required:
+        - ingredients_request
+      properties:
+        ingredients_request:
+          type: object
+          required:
+            - ingredients
+          properties:
+            ingredients:
+              type: array
+              items:
+                type: string
+              description: "A list of ingredients to include in the drink."
 ```
 
----
+#### Drink Response
 
-#### !!steps DrinkResponseComponent
-
-Next up, `DrinkResponse`, is a JSON object that contains the name, description, recipe, and a photo of a drink.
-
-```yaml ! bar.yaml focus=106:126 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+    DrinkResponse:
+      type: object
+      description: "A response containing a new drink recipe."
+      required:
+        - name
+        - description
+        - recipe
+      properties:
+        name:
+          type: string
+          description: "The name of the drink."
+        description:
+          type: string
+          description: "A description of the drink."
+        recipe:
+          type: string
+          description: "Instructions on how to make the drink."
+        photo:
+          type: string
+          description: "A URL to a photo of the drink."
 ```
 
----
+#### Drink Name Request
 
-#### !!steps DrinkNameRequestComponent
-
-The third component, `DrinkNameRequest`, is a JSON object that contains the name of a drink.
-
-```yaml ! bar.yaml focus=128:137 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+    DrinkNameRequest:
+      type: object
+      description: "A request to get a drink recipe by name."
+      required:
+        - drink_name_request
+      properties:
+        drink_name_request:
+          type: object
+          required:
+            - name
+          properties:
+            name:
+              type: string
+              description: "The name of the drink."
 ```
 
----
+#### Drink Recipe Response
 
-#### !!steps DrinkRecipeResponseComponent
-
-Our fourth component, `DrinkRecipeResponse`, is a JSON object that contains the ingredients, recipe, and a photo of a drink.
-
-```yaml ! bar.yaml focus=139:156 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+    DrinkRecipeResponse:
+      type: object
+      description: "A response containing a drink recipe."
+      required:
+        - ingredients
+        - recipe
+      properties:
+        ingredients:
+          type: array
+          items:
+            $ref: '#/components/schemas/IngredientQuantity'
+          description: "A list of ingredients with quantities."
+        recipe:
+          type: string
+          description: "Instructions on how to make the drink."
+        photo:
+          type: string
+          description: "A URL to a photo of the drink."
 ```
 
----
+#### Ingredient Quantity
 
-#### !!steps IngredientQuantityComponent
-
-Our fifth component, `IngredientQuantity`, is a JSON object that contains the name and quantity of an ingredient.
-
-```yaml ! bar.yaml focus=158:169 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+    IngredientQuantity:
+      type: object
+      description: "An ingredient with a quantity."
+      required:
+        - name
+        - quantity
+      properties:
+        name:
+          type: string
+          description: "The name of the ingredient."
+        quantity:
+          type: string
+          description: "The quantity of the ingredient."
 ```
 
----
+#### Error
 
-#### !!steps ErrorComponent
-
-Finally, `error` is a JSON object that contains an error code and message.
-
-```yaml ! bar.yaml focus=171:181 !from ./assets/gnostic/bar.yaml
+```yaml bar.yaml
+    error:
+      type: object
+      description: "An error response."
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          description: "The error code."
+        message:
+          type: string
+          description: "The error message."
 ```
 
-#### !!steps DevEnvironment
+## Setting Up the Development Environment
 
 Here, we'll take an opinionated approach to setting up a development environment. We'll use Docker and dev containers in VS Code to ensure that everyone has the same environment and avoid any issues with dependencies.
 
-We'll start by creating a `Dockerfile` in the `.devcontainer` directory. The `Dockerfile` will install all the dependencies we need to generate our gRPC server.
+We'll start by creating a `Dockerfile` in the `.devcontainer` directory. Our development container is based on `mcr.microsoft.com/devcontainers/go` from the Microsoft Dev Container Images repository:
 
-Our development container is based on `mcr.microsoft.com/devcontainers/go` from the Microsoft Dev Container Images repository. The image we'll use has Go version 1.22 and is based on Debian Bookworm.
+```docker Dockerfile
+FROM mcr.microsoft.com/devcontainers/go:1.22-bookworm
 
-```docker ! Dockerfile !from ./assets/gnostic/Dockerfile.txt
+RUN curl -o- https://raw.githubusercontent.com/speakeasy-api/speakeasy/main/install.sh | bash
+
+RUN go install github.com/google/gnostic@v0.7.0 && \
+    go install github.com/google/gnostic-grpc@latest && \
+    go install github.com/protocolbuffers/protobuf-go/cmd/protoc-gen-go@v1.32.0 && \
+    go install github.com/bufbuild/buf/cmd/buf@v1.30.0 && \
+    go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.3.0 && \
+    go install github.com/fullstorydev/grpcurl/cmd/grpcurl@latest && \
+    go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@v2.18.0
+
+COPY . /app
+WORKDIR /app
+
+RUN go mod tidy
+
+EXPOSE 50051
+
+CMD ["go", "run", "main.go"]
 ```
 
----
+In this Dockerfile:
 
-#### !!steps SpeakeasyInstall
-
-We'll install Speakeasy using the `install.sh` script from the Speakeasy repository.
-
-```docker ! Dockerfile focus=3 !from ./assets/gnostic/Dockerfile.txt
-```
-
----
-
-#### !!steps ToolInstallation
-
-Next, we'll install Gnostic, the Gnostic gRPC plugin, the Go protocol buffer compiler, Buf, the gRPC Go plugin, gRPCurl, and the gRPC gateway plugin.
-
-```docker ! Dockerfile focus=5:11 !from ./assets/gnostic/Dockerfile.txt
-```
-
----
-
-#### !!steps ProjectFilesSetup
-
-We'll copy our project files into the container and set the working directory to `/app`.
-
-```docker ! Dockerfile focus=13:14 !from ./assets/gnostic/Dockerfile.txt
-```
-
----
-
-#### !!steps DependencyUpdate
-
-We'll run `go mod tidy` to ensure all dependencies are up to date.
-
-```docker ! Dockerfile focus=16 !from ./assets/gnostic/Dockerfile.txt
-```
-
----
-
-#### !!steps PortExposure
-
-Finally, we'll expose port 50051 and run our server.
-
-```docker ! Dockerfile focus=18:21 !from ./assets/gnostic/Dockerfile.txt
-```
-
-</Spotlight>
+1. We install Speakeasy using the `install.sh` script from the Speakeasy repository
+2. We install all necessary tools:
+   - Gnostic
+   - Gnostic gRPC plugin
+   - Go protocol buffer compiler
+   - Buf
+   - gRPC Go plugin
+   - gRPCurl
+   - gRPC gateway plugin
+3. We copy our project files into the container and set the working directory to `/app`
+4. We run `go mod tidy` to ensure all dependencies are up to date
+5. We expose port 50051 for the gRPC server and set the command to run our server
 
 ### Dev Container Configuration
 
@@ -333,34 +438,38 @@ Update the `buf.yaml` file created in the project root with the following conten
 
 We depend on `googleapis` because the gRPC Go plugin requires it.
 
-<Spotlight>
-
-#### !!steps BufGenYaml
+### Configuring Buf for Code Generation
 
 Next, create a `buf.gen.yaml` file in the project root with the following content:
 
-```yaml ! buf.gen.yaml !from ./assets/gnostic/buf.gen.yaml
+```yaml buf.gen.yaml
+version: v1
+managed:
+  enabled: true
+  go_package_prefix:
+    default: github.com/speakeasy-api/grpc-rest-service/bar
+    except:
+      - buf.build/googleapis/googleapis
+plugins:
+  - name: go
+    out: .
+    opt: paths=source_relative
+  - name: go-grpc
+    out: .
+    opt: paths=source_relative,require_unimplemented_servers=false
+  - name: grpc-gateway
+    out: .
+    opt: paths=source_relative
 ```
 
----
+In this configuration:
 
-#### !!steps ManagedMode
-
-We enable managed mode and set the `go_package_prefix` to `github.com/speakeasy-api/grpc-rest-service/bar`.
-
-```yaml ! buf.gen.yaml focus=1:7 !from ./assets/gnostic/buf.gen.yaml
-```
-
----
-
-#### !!steps PluginsSetup
-
-We also specify the plugins we want to use and where to output the generated code.
-
-```yaml ! buf.gen.yaml focus=9:21 !from ./assets/gnostic/buf.gen.yaml
-```
-
-</Spotlight>
+1. We enable managed mode, which helps Buf manage the generated code
+2. We set the `go_package_prefix` to `github.com/speakeasy-api/grpc-rest-service/bar`, which determines the package name in the generated Go code
+3. We configure three plugins:
+   - `go`: Generates Go code for the protocol buffers
+   - `go-grpc`: Generates Go code for the gRPC service
+   - `grpc-gateway`: Generates Go code for the gRPC gateway, which translates RESTful HTTP and JSON requests to gRPC
 
 Update Buf's dependencies using the following command:
 
