--- a/openapi/frameworks/zod.mdx
+++ b/openapi/frameworks/zod.mdx
@@ -3,7 +3,7 @@ title: How To Generate an OpenAPI Spec with Zod
 description: "How to generate OpenAPI schemas and great SDK clients for your Zod-validated API"
 ---
 
-import { Callout, Spotlight } from "@/mdx/components";
+import { Callout } from "@/mdx/components";
 
 
 # How to generate an OpenAPI/Swagger spec with Zod
@@ -57,12 +57,12 @@ Use npm to install `zod-openapi`:
 npm install zod-openapi yaml
 ```
 
-<Spotlight>
-### !!steps 3. Create Your App's First Zod Schema
+### 3. Create Your App's First Zod Schema
 
 Save this TypeScript code in a new file called `index.ts`.
 
-```typescript ! index.ts
+```typescript index.ts
+// !focus(1:7)
 import { z } from "zod";
 
 const burgerSchema = z.object({
@@ -72,14 +72,12 @@ const burgerSchema = z.object({
 });
 ```
 
----
-
-### !!steps 4. Extend Zod With OpenAPI
+### 4. Extend Zod With OpenAPI
 
 We'll add the `openapi` method to Zod by calling `extendZodWithOpenApi` once. Update `index.ts` to import `extendZodWithOpenApi` from `zod-openapi`, then call `extendZodWithOpenApi`.
 
-```typescript ! index.ts
-// !mark(3:4)
+```typescript index.ts
+// !focus(1:9) !mark(3,4)
 import { z } from "zod";
 
 import { extendZodWithOpenApi } from "zod-openapi";
@@ -92,16 +90,14 @@ const burgerSchema = z.object({
 });
 ```
 
----
-
-### !!steps 5. Register and Generate a Component Schema
+### 5. Register and Generate a Component Schema
 
 Next, we'll use the new `openapi` method provided by `extendZodWithOpenApi` to register an OpenAPI schema for the `burgerSchema`. Edit `index.ts` and add `.openapi({ref: "Burger"}` to the `burgerSchema` schema object.
 
 We'll also add an OpenAPI generator, `OpenApiGeneratorV31`, and log the generated component to the console as YAML.
 
-```typescript ! index.ts
-// !mark(12)
+```typescript index.ts
+// !focus(1:12) !mark(12)
 import { z } from "zod";
 
 import { extendZodWithOpenApi } from "zod-openapi";
@@ -116,9 +112,7 @@ const burgerSchema = z.object({
 burgerSchema.openapi({ ref: "Burger" });
 ```
 
----
-
-### !!steps 6. Add Metadata to Components
+### 6. Add Metadata to Components
 
 To generate an SDK that offers great developer experience, we recommend adding descriptions and examples to all fields in OpenAPI components.
 
@@ -130,8 +124,8 @@ We'll also add a description to the `Burger` component itself.
 
 Edit `index.ts` and edit `burgerSchema` to add OpenAPI metadata.
 
-```typescript ! index.ts
-// !mark(7:19,22:23)
+```typescript index.ts
+// !focus(1:23) !mark(7:19,22:23)
 import { z } from "zod";
 
 import { extendZodWithOpenApi } from "zod-openapi";
@@ -158,15 +152,13 @@ burgerSchema.openapi({
 });
 ```
 
----
-
-### !!steps 7. Prepare to Generate an OpenAPI Document
+### 7. Prepare to Generate an OpenAPI Document
 
 Now that we know how to register components with metadata for our OpenAPI schema, let's generate a complete schema document.
 
 Import `yaml` and `createDocument`.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(1,7)
 import * as yaml from "yaml";
 
@@ -199,13 +191,11 @@ burgerSchema.openapi({
 });
 ```
 
----
-
-### !!steps 8. Generate an OpenAPI Document
+### 8. Generate an OpenAPI Document
 
 We'll use the `createDocument` method to generate an OpenAPI document. We'll pass in the `burgerSchema` and a title for the document.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(31:49,51)
 import * as yaml from "yaml";
 
@@ -260,9 +250,7 @@ const document = createDocument({
 console.log(yaml.stringify(document));
 ```
 
----
-
-### !!steps 9. Run the Code
+### 9. Run the Code
 
 Run the code in the terminal:
 
@@ -306,15 +294,13 @@ components:
 npx ts-node index.ts
 ```
 
----
-
-### !!steps 10. Add a Burger ID Schema
+### 10. Add a Burger ID Schema
 
 To make the burger ID available to other schemas, we'll define a burger ID schema. We'll also use this schema to define a path parameter for the burger ID later on.
 
 Let's create the burger ID schema now.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(11:22)
 import * as yaml from "yaml";
 
@@ -381,11 +367,11 @@ console.log(yaml.stringify(document));
 
 ---
 
-### !!steps 11. Replace the Burger ID Field With a Reference
+### 11. Replace the Burger ID Field With a Reference
 
 We'll replace the burger ID field with a reference to the burger ID schema.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(25,11:20)
 import * as yaml from "yaml";
 
@@ -452,11 +438,11 @@ console.log(yaml.stringify(document));
 
 ---
 
-### !!steps 12. Add a Schema for Creating Burgers
+### 12. Add a Schema for Creating Burgers
 
 We'll add a schema for creating burgers that doesn't include an ID. We'll use this schema to define the request body for the create burger path.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(41:44)
 import * as yaml from "yaml";
 
@@ -526,9 +512,7 @@ const document = createDocument({
 console.log(yaml.stringify(document));
 ```
 
----
-
-### !!steps 13. Add Paths
+### 13. Add Paths
 
 Paths define the endpoints of your API. For our burger restaurant, we might define endpoints for creating, reading, updating, and deleting burgers and orders.
 
@@ -536,7 +520,7 @@ To register paths and webhooks, we'll define paths as objects of type `ZodOpenAp
 
 Start by importing `ZodOpenApiOperationObject` from `zod-openapi`.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(7)
 import * as yaml from "yaml";
 
@@ -607,13 +591,11 @@ const document = createDocument({
 console.log(yaml.stringify(document));
 ```
 
----
-
-### !!steps 14. Add a Create Burger Path
+### 14. Add a Create Burger Path
 
 We'll add a path for creating a new burger. We'll use the `ZodOpenApiOperationObject` type to define the path.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(47:69)
 import * as yaml from "yaml";
 
@@ -706,15 +688,12 @@ const document = createDocument({
 });
 
 console.log(yaml.stringify(document));
-```
 
----
-
-### !!steps 15. Add a Read Burger Path
+### 15. Add a Read Burger Path
 
 We'll add a path for fetching a burger by ID. We'll use the `ZodOpenApiOperationObject` type to define the path.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(71:88)
 import * as yaml from "yaml";
 
@@ -828,13 +807,11 @@ const document = createDocument({
 console.log(yaml.stringify(document));
 ```
 
----
-
-### !!steps 16. Add a Webhook That Runs When a Burger Is Created
+### 16. Add a Webhook That Runs When a Burger Is Created
 
 We'll add a webhook that runs when a burger is created. We'll use the `ZodOpenApiOperationObject` type to define the webhook.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(90:107)
 import * as yaml from "yaml";
 
@@ -967,13 +944,11 @@ const document = createDocument({
 console.log(yaml.stringify(document));
 ```
 
----
-
-### !!steps 17. Register Paths and Webhooks
+### 17. Register Paths and Webhooks
 
 We'll register our paths and webhooks by adding them to the document definition.
 
-```typescript ! index.ts
+```typescript index.ts
 // !mark(116:128)
 import * as yaml from "yaml";
 
@@ -1119,9 +1094,7 @@ const document = createDocument({
 console.log(yaml.stringify(document));
 ```
 
----
-
-### !!steps 18. Run the Code
+### 18. Run the Code
 
 Run the code in the terminal:
 
@@ -1234,8 +1207,6 @@ components:
 ```bash Terminal
 npx ts-node index.ts
 ```
-
-</Spotlight>
 
 ### 19. Generate an SDK
 
